[tool.poetry]
name = "matrix-spam"
version = "0.1.0"
description = ""
authors = ["Dmitrii Kurlov <dmitriik@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
read_env = "^1.1.0"
httpx = "^0.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
